[maven-release-plugin] rollback the release of display-url-api-1.0-beta-1

--- a/pom.xml
+++ b/pom.xml
@@ -9,7 +9,7 @@
     <relativePath />
   </parent>
   <artifactId>display-url-api</artifactId>
-  <version>1.0-beta-2-SNAPSHOT</version>
+  <version>0.6-SNAPSHOT</version>
   <packaging>hpi</packaging>
 
   <properties>
