--- a/pom.xml
+++ b/pom.xml
@@ -9,7 +9,7 @@
     <relativePath />
   </parent>
   <artifactId>display-url-api</artifactId>
-  <version>2.2.1-SNAPSHOT</version>
+  <version>2.3.0</version>
   <packaging>hpi</packaging>
 
   <properties>
@@ -41,7 +41,7 @@
     <connection>scm:git:git://github.com/jenkinsci/${project.artifactId}-plugin.git</connection>
     <developerConnection>scm:git:git@github.com:jenkinsci/${project.artifactId}-plugin.git</developerConnection>
     <url>http://github.com/jenkinsci/${project.artifactId}-plugin</url>
-    <tag>HEAD</tag>
+    <tag>display-url-api-2.3.0</tag>
   </scm>
 
   <repositories>
