--- a/pom.xml
+++ b/pom.xml
@@ -5,7 +5,7 @@
   <parent>
     <groupId>org.jenkins-ci.plugins</groupId>
     <artifactId>plugin</artifactId>
-    <version>3.28</version>
+    <version>3.40</version>
     <relativePath />
   </parent>
   <artifactId>display-url-api</artifactId>
@@ -13,8 +13,8 @@
   <packaging>hpi</packaging>
 
   <properties>
-    <jenkins.version>1.609.3</jenkins.version>
-    <java.level>6</java.level>
+    <jenkins.version>2.89.4</jenkins.version>
+    <java.level>8</java.level>
     <jenkins-test-harness.version>2.13</jenkins-test-harness.version>
   </properties>
 
@@ -59,6 +59,11 @@
 
   <dependencies>
     <dependency>
+      <groupId>org.jenkins-ci.plugins</groupId>
+      <artifactId>command-launcher</artifactId>
+      <version>1.3</version>
+    </dependency>
+    <dependency>
       <groupId>org.mockito</groupId>
       <artifactId>mockito-core</artifactId>
       <version>2.7.6</version>
@@ -67,7 +72,21 @@
     <dependency>
       <groupId>io.rest-assured</groupId>
       <artifactId>rest-assured</artifactId>
-      <version>3.0.2</version>
+      <version>3.3.0</version>
+      <scope>test</scope>
+      <exclusions>
+        <exclusion>
+          <groupId>com.sun.xml.bind</groupId>
+          <artifactId>jaxb-osgi</artifactId>
+        </exclusion>
+      </exclusions>
+    </dependency>
+    <dependency>
+      <!-- forcing 2.3.0 in dep for rest-assured to avoid systemPath issue on JDK11,
+      see https://github.com/jenkinsci/jaxb-plugin/pull/6 for more information -->
+      <groupId>javax.xml.bind</groupId>
+      <artifactId>jaxb-api</artifactId>
+      <version>2.3.0</version>
       <scope>test</scope>
     </dependency>
     <dependency>
