--- a/pom.xml
+++ b/pom.xml
@@ -15,7 +15,6 @@
   <properties>
     <jenkins.version>2.89.4</jenkins.version>
     <java.level>8</java.level>
-    <jenkins-test-harness.version>2.13</jenkins-test-harness.version>
   </properties>
 
   <name>Display URL API</name>
@@ -59,12 +58,6 @@
 
   <dependencies>
     <dependency>
-      <groupId>org.jenkins-ci.plugins</groupId>
-      <artifactId>command-launcher</artifactId>
-      <version>1.3</version>
-      <scope>test</scope>
-    </dependency>
-    <dependency>
       <groupId>org.mockito</groupId>
       <artifactId>mockito-core</artifactId>
       <version>2.7.6</version>
@@ -88,6 +81,12 @@
       <groupId>javax.xml.bind</groupId>
       <artifactId>jaxb-api</artifactId>
       <version>2.3.0</version>
+      <scope>test</scope>
+    </dependency>
+    <dependency>
+      <groupId>org.apache.commons</groupId> <!-- forced bc RequireUpperBoundDeps -->
+      <artifactId>commons-lang3</artifactId>
+      <version>3.7</version>
       <scope>test</scope>
     </dependency>
     <dependency>
