--- a/pom.xml
+++ b/pom.xml
@@ -73,6 +73,10 @@
           <groupId>com.sun.xml.bind</groupId>
           <artifactId>jaxb-osgi</artifactId>
         </exclusion>
+        <exclusion>
+          <groupId>org.apache.commons</groupId> <!-- forced bc RequireUpperBoundDeps, pulled by JTH -->
+          <artifactId>commons-lang3</artifactId>
+        </exclusion>
       </exclusions>
     </dependency>
     <dependency>
@@ -81,12 +85,6 @@
       <groupId>javax.xml.bind</groupId>
       <artifactId>jaxb-api</artifactId>
       <version>2.3.0</version>
-      <scope>test</scope>
-    </dependency>
-    <dependency>
-      <groupId>org.apache.commons</groupId> <!-- forced bc RequireUpperBoundDeps -->
-      <artifactId>commons-lang3</artifactId>
-      <version>3.7</version>
       <scope>test</scope>
     </dependency>
     <dependency>
