--- a/pom.xml
+++ b/pom.xml
@@ -9,10 +9,12 @@
     <relativePath />
   </parent>
   <artifactId>display-url-api</artifactId>
-  <version>2.3.2-SNAPSHOT</version>
+  <version>${revision}${changelist}</version>
   <packaging>hpi</packaging>
 
   <properties>
+    <revision>2.3.2</revision>
+    <changelist>-SNAPSHOT</changelist>
     <jenkins.version>2.89.4</jenkins.version>
     <java.level>8</java.level>
   </properties>
