[maven-release-plugin] prepare release display-url-api-2.3.3

--- a/pom.xml
+++ b/pom.xml
@@ -9,7 +9,7 @@
   </parent>
 
   <artifactId>display-url-api</artifactId>
-  <version>${revision}${changelist}</version>
+  <version>2.3.3</version>
   <packaging>hpi</packaging>
 
   <properties>
