--- a/pom.xml
+++ b/pom.xml
@@ -9,7 +9,7 @@
   </parent>
 
   <artifactId>display-url-api</artifactId>
-  <version>${revision}${changelist}</version>
+  <version>2.3.6</version>
   <packaging>hpi</packaging>
 
   <properties>
@@ -43,7 +43,7 @@
   <scm>
     <connection>scm:git:git://github.com/${gitHubRepo}.git</connection>
     <developerConnection>scm:git:git@github.com:${gitHubRepo}.git</developerConnection>
-    <tag>${scmTag}</tag>
+    <tag>display-url-api-2.3.6</tag>
     <url>https://github.com/${gitHubRepo}</url>
   </scm>
 
