--- a/pom.xml
+++ b/pom.xml
@@ -9,11 +9,11 @@
   </parent>
 
   <artifactId>display-url-api</artifactId>
-  <version>2.3.6</version>
+  <version>${revision}${changelist}</version>
   <packaging>hpi</packaging>
 
   <properties>
-    <revision>2.3.6</revision>
+    <revision>2.3.7</revision>
     <changelist>-SNAPSHOT</changelist>
     <jenkins.version>2.332.1</jenkins.version>
     <java.level>8</java.level>
@@ -43,7 +43,7 @@
   <scm>
     <connection>scm:git:git://github.com/${gitHubRepo}.git</connection>
     <developerConnection>scm:git:git@github.com:${gitHubRepo}.git</developerConnection>
-    <tag>display-url-api-2.3.6</tag>
+    <tag>${scmTag}</tag>
     <url>https://github.com/${gitHubRepo}</url>
   </scm>
 
