--- a/pom.xml
+++ b/pom.xml
@@ -5,7 +5,8 @@
   <parent>
     <groupId>org.jenkins-ci.plugins</groupId>
     <artifactId>plugin</artifactId>
-    <version>4.37</version>
+    <version>4.53</version>
+    <relativePath />
   </parent>
 
   <artifactId>display-url-api</artifactId>
@@ -15,20 +16,17 @@
   <properties>
     <revision>2.3.7</revision>
     <changelist>-SNAPSHOT</changelist>
-    <jenkins.version>2.332.1</jenkins.version>
-    <java.level>8</java.level>
+    <jenkins.version>2.361.1</jenkins.version>
     <gitHubRepo>jenkinsci/${project.artifactId}-plugin</gitHubRepo>
-    <hamcrest.version>2.2</hamcrest.version>
   </properties>
 
   <name>Display URL API</name>
-  <description>Provides the DisplayURLProvider extension point to provide alternate URLs for use in notifications</description>
   <url>https://github.com/jenkinsci/${project.artifactId}-plugin</url>
 
   <licenses>
     <license>
       <name>MIT License</name>
-      <url>http://opensource.org/licenses/MIT</url>
+      <url>https://opensource.org/licenses/MIT</url>
     </license>
   </licenses>
 
@@ -41,7 +39,7 @@
   </developers>
 
   <scm>
-    <connection>scm:git:git://github.com/${gitHubRepo}.git</connection>
+    <connection>scm:git:https://github.com/${gitHubRepo}.git</connection>
     <developerConnection>scm:git:git@github.com:${gitHubRepo}.git</developerConnection>
     <tag>${scmTag}</tag>
     <url>https://github.com/${gitHubRepo}</url>
@@ -64,111 +62,68 @@
     <dependencies>
       <dependency>
         <groupId>io.jenkins.tools.bom</groupId>
-        <artifactId>bom-2.332.x</artifactId>
-        <version>1409.v7659b_c072f18</version>
-        <scope>import</scope>
+        <artifactId>bom-2.361.x</artifactId>
+        <version>1742.vb_70478c1b_25f</version>
         <type>pom</type>
-      </dependency>
-      <dependency>
-        <groupId>com.github.spotbugs</groupId>
-        <artifactId>spotbugs-annotations</artifactId>
-        <version>4.7.0</version>
-      </dependency>
-      <dependency>
-        <groupId>junit</groupId>
-        <artifactId>junit</artifactId>
-        <version>4.13.2</version>
-        <scope>test</scope>
-      </dependency>
-      <dependency>
-        <groupId>org.hamcrest</groupId>
-        <artifactId>hamcrest</artifactId>
-        <version>${hamcrest.version}</version>
+        <scope>import</scope>
       </dependency>
     </dependencies>
   </dependencyManagement>
 
   <dependencies>
     <dependency>
-      <groupId>org.mockito</groupId>
-      <artifactId>mockito-core</artifactId>
+      <groupId>io.jenkins.plugins</groupId>
+      <artifactId>commons-lang3-api</artifactId>
       <scope>test</scope>
     </dependency>
     <dependency>
       <groupId>io.rest-assured</groupId>
       <artifactId>rest-assured</artifactId>
-      <version>5.1.1</version>
+      <version>5.3.0</version>
       <scope>test</scope>
       <exclusions>
+        <!-- Provided by commons-lang3-api plugin -->
         <exclusion>
-          <groupId>com.sun.xml.bind</groupId>
-          <artifactId>jaxb-osgi</artifactId>
+          <groupId>org.apache.commons</groupId>
+          <artifactId>commons-lang3</artifactId>
+        </exclusion>
+        <!-- Provided by core -->
+        <exclusion>
+          <groupId>org.apache.groovy</groupId>
+          <artifactId>groovy</artifactId>
         </exclusion>
         <exclusion>
-          <groupId>org.apache.commons</groupId> <!-- forced bc RequireUpperBoundDeps, pulled by JTH -->
-          <artifactId>commons-lang3</artifactId>
+          <groupId>org.apache.groovy</groupId>
+          <artifactId>groovy-json</artifactId>
+        </exclusion>
+        <exclusion>
+          <groupId>org.apache.groovy</groupId>
+          <artifactId>groovy-xml</artifactId>
+        </exclusion>
+        <!-- Provided by apache-httpcomponents-client-4-api plugin -->
+        <exclusion>
+          <groupId>org.apache.httpcomponents</groupId>
+          <artifactId>httpclient</artifactId>
+        </exclusion>
+        <exclusion>
+          <groupId>org.apache.httpcomponents</groupId>
+          <artifactId>httpcore</artifactId>
+        </exclusion>
+        <exclusion>
+          <groupId>org.apache.httpcomponents</groupId>
+          <artifactId>httpmime</artifactId>
         </exclusion>
       </exclusions>
     </dependency>
     <dependency>
-      <!-- forcing 2.3.1 in dep for rest-assured to avoid systemPath issue on JDK11,
-      see https://github.com/jenkinsci/jaxb-plugin/pull/6 for more information -->
-      <groupId>javax.xml.bind</groupId>
-      <artifactId>jaxb-api</artifactId>
-      <version>2.3.1</version>
+      <groupId>org.jenkins-ci.plugins</groupId>
+      <artifactId>apache-httpcomponents-client-4-api</artifactId>
       <scope>test</scope>
     </dependency>
     <dependency>
-      <groupId>org.hamcrest</groupId>
-      <artifactId>hamcrest-core</artifactId>
-      <version>${hamcrest.version}</version>
-      <scope>test</scope>
-    </dependency>
-    <!-- upperbound dependency -->
-    <dependency>
-      <groupId>org.hamcrest</groupId>
-      <artifactId>hamcrest-library</artifactId>
-      <version>${hamcrest.version}</version>
+      <groupId>org.mockito</groupId>
+      <artifactId>mockito-core</artifactId>
       <scope>test</scope>
     </dependency>
   </dependencies>
-
-  <!-- TODO remove once core baseline is sufficiently new -->
-  <build>
-    <plugins>
-      <plugin>
-        <!-- do not copy this, we are in a special case where the target Jenkins is sufficiently old and
-             none of the dependencies we reference are bundled in the .hpi -->
-        <artifactId>maven-enforcer-plugin</artifactId>
-        <executions>
-          <execution>
-            <id>display-info</id>
-            <configuration>
-              <rules>
-                <requireUpperBoundDeps>
-                  <excludes combine.children="append">
-                    <exclude>commons-codec:commons-codec</exclude>
-                    <exclude>org.apache.ant:ant</exclude>
-                    <exclude>org.eclipse.jetty:jetty-util</exclude>
-                    <exclude>org.eclipse.jetty:jetty-io</exclude>
-                    <exclude>org.codehaus.plexus:plexus-utils</exclude>
-                    <exclude>org.codehaus.plexus:plexus-classworlds</exclude>
-                  </excludes>
-                </requireUpperBoundDeps>
-                <enforceBytecodeVersion>
-                  <excludes combine.children="append">
-                    <exclude>org.kohsuke:access-modifier-annotation</exclude>
-                    <exclude>org.codehaus.mojo:animal-sniffer-annotations</exclude>
-                    <exclude>javax.servlet:javax.servlet-api</exclude>
-                  </excludes>
-                </enforceBytecodeVersion>
-              </rules>
-            </configuration>
-          </execution>
-        </executions>
-      </plugin>
-    </plugins>
-  </build>
-  <!--END remove once core baseline is sufficiently new-->
-
 </project>
