Configure plugin for automated releases (#203)
* Configure plugin for automated releases

* Fix changelist for CD releases

Co-authored-by: Alexander Brandes <brandes.alexander@web.de>

---------

Co-authored-by: Alexander Brandes <brandes.alexander@web.de>
Co-authored-by: Carroll Chiou <cchiou@cloudbees.com>

--- a/pom.xml
+++ b/pom.xml
@@ -10,12 +10,12 @@
   </parent>
 
   <artifactId>display-url-api</artifactId>
-  <version>${revision}${changelist}</version>
+  <version>${revision}.${changelist}</version>
   <packaging>hpi</packaging>
 
   <properties>
-    <revision>2.3.10</revision>
-    <changelist>-SNAPSHOT</changelist>
+    <revision>2</revision>
+    <changelist>999999-SNAPSHOT</changelist>
     <jenkins.version>2.361.1</jenkins.version>
     <gitHubRepo>jenkinsci/${project.artifactId}-plugin</gitHubRepo>
   </properties>
