--- a/pom.xml
+++ b/pom.xml
@@ -5,7 +5,7 @@
   <parent>
     <groupId>org.jenkins-ci.plugins</groupId>
     <artifactId>plugin</artifactId>
-    <version>4.73</version>
+    <version>4.81</version>
     <relativePath />
   </parent>
 
@@ -18,6 +18,7 @@
     <changelist>999999-SNAPSHOT</changelist>
     <jenkins.version>2.361.1</jenkins.version>
     <gitHubRepo>jenkinsci/${project.artifactId}-plugin</gitHubRepo>
+    <useBeta>true</useBeta> <!-- Jenkins.MANAGE -->
   </properties>
 
   <name>Display URL API</name>
